  module.

Extension Modules
-----------------

- Issue #6944: Fix a SystemError when socket.getnameinfo() was called
  with something other than a tuple as first argument.

- Issue #6848: Fix curses module build failure on OS X 10.6.

- Fix expat to not segfault with specially crafted input.

- Issue #4873: Fix resource leaks in error cases of pwd and grp.

Build
-----

- Issue #6802: Fix build issues on MacOSX 10.6

- Issue 5390: Add uninstall icon independent of whether file
  extensions are installed.

- Issue #6094: Build correctly with Subversion 1.7.

- Issue #5726: Make Modules/ld_so_aix return the actual exit code of the
  linker, rather than always exit successfully. Patch by Floris Bruynooghe.

- Issue 5809: Specifying both --enable-framework and --enable-shared is
  an error. Configure now explicity tells you about this.

Documentation
-------------

- Issue #6556: Fixed the Distutils configuration files location explanation
  for Windows.

- Issue #6801 : symmetric_difference_update also accepts |.
  Thanks to Carl Chenet.

Tests
-----

- Issue #5837: Certain sequences of calls to set() and unset() for
  support.EnvironmentVarGuard objects restored the environment variables
  incorrectly on __exit__.


What's New in Python 2.6.2
==========================

*Release date: 14-Apr-2009*


What's New in Python 2.6.2 rc 1
===============================

*Release date: 06-Apr-2009*

Core and Builtins
-----------------

- xrange() is now registered as a Sequence.

- Fix a problem in PyErr_NormalizeException that leads to "undetected errors"
  when hitting the recursion limit under certain circumstances.

- Issue #1665206: Remove the last eager import in _warnings.c and make it lazy.

- Issue #4034: Fix weird attribute error messages of the traceback object. (As
  a result traceback.__members__ no longer exists.)

- Issue #5247: Improve error message when unknown format codes are
  used when using str.format() with str, unicode, long, int, and